# UMJI-VG101-Project_FoR

./: CMakeLists.txt  Form.cpp  README.md  Screen.cpp  VG101Hw8.cbp  VG101Hw8.depend  VG101Hw8.layout  main.cpp
headers/: button.h  button_simple.h  form.h  hw8.h  label.h  screen.h  uicontrols.h  uiproperty.h
headers_gui/: button.h  form_control.h  hw8_gui.h  label.h  screen.h  textbox.h  uiproperty.h
src/: Screen.cpp  control.cpp  form.cpp  main.cpp  main_old.cpp  ui_controls.cpp  ui_properties.cpp
src_gui/: Screen.cpp  control.cpp  form_control.cpp  label.cpp  main.cpp  textbox.cpp  ui_properties.cpp  uibutton.cpp  uiproperty.cpp
src_school/: Building.cpp  Building.h  College.cpp  College.h  Course.cpp  Course.h  Database.cpp  Database.h  Person.cpp  Person.h  Room.cpp  Room.h  Schedule.cpp  Schedule.h  Session.cpp  Session.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  globaldef.h  hw8_college.h
